--- a/sass/main.sass
+++ b/sass/main.sass
@@ -54,7 +54,8 @@ body
                 line-height: 24px /* Приближение из-за подстановки шрифтов */
                 text-align: center
                 text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.4)
-                margin-top: 57px
+                margin-top: 65px
+                margin-left: 100px
         .phone
             display: inline-block
             img 
@@ -72,7 +73,7 @@ body
                 margin-right: 80px
         .img_top_menu img 
             position: absolute
-            bottom: -55px
+            bottom: -27px
             left: -31px
         .top_menu
             ul
