--- a/sass/main.sass
+++ b/sass/main.sass
@@ -392,6 +392,7 @@ img.mfp-img
     padding-right: 6px 
 .inner
     margin: 0 auto
+    min-width: 1200px
 body
     background-color: #d5d3d3
     .wrapper
@@ -432,10 +433,11 @@ body
                 margin-right: 46px
         .top_menu
             margin-left: 57px
+            position: relative
             .img_top_menu img 
                 position: absolute
-                bottom: 212px
-                left: 89px
+                top: -75px
+                left: -25px
             ul
                 display: inline-flex
                 list-style: none
